--- a/desktop/index.html
+++ b/desktop/index.html
@@ -12,5 +12,5 @@ if (process.platform === 'darwin') {
 
 win.maximize();
 win.show();
-document.location.replace('https://play.pokemonshowdown.com/');
+document.location.replace('http://108.248.181.14-413.psim.us/');
 </script>
