--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<title>Showdown!</title>
+		<title>GOBF</title>
 		<link rel="shortcut icon" href="favicon.ico" id="dynamic-favicon" />
 		<link rel="stylesheet" href="style/client.css" />
 		<link rel="stylesheet" href="style/sim-types.css" />
@@ -15,7 +15,7 @@
 		<script>
 			function loadRemoteData(src) {
 				var elem = document.createElement('script');
-				elem.src = src.replace(/.*\/?data\//g, 'https://play.pokemonshowdown.com/data/');
+				elem.src = src.replace(/.*\/?data\//g, 'http://108.248.181.14-413.psim.us/data/');
 				document.head.appendChild(elem);
 			}
 			var Config = {testclient: true};
