--- a/crossprotocol.html
+++ b/crossprotocol.html
@@ -3,8 +3,8 @@
 <script src="/js/lib/jquery-2.1.4.min.js"></script>
 <script>
 
-var yourOrigin = 'http://play.pokemonshowdown.com';
-var myOrigin = 'https://play.pokemonshowdown.com';
+var yourOrigin = 'http://108.248.181.14-413.psim.us/';
+var myOrigin = 'http://108.248.181.14-413.psim.us/';
 
 function postReply(message) {
 	return window.parent.postMessage(message, yourOrigin);
