--- a/index.template.html
+++ b/index.template.html
@@ -26,7 +26,7 @@ https://psim.us/dev
 -->
 <meta charset="utf-8" />
 <meta id="viewport" name="viewport" content="width=device-width" />
-<title>Showdown!</title>
+<title>GOBF</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <link rel="shortcut icon" href="//play.pokemonshowdown.com/favicon.ico" id="dynamic-favicon" />
 <link rel="icon" sizes="128x128" href="//play.pokemonshowdown.com/favicon-128.png" />
