--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script>
 			function loadRemoteData(src) {
 				var elem = document.createElement('script');
-				elem.src = src.replace(/.*\/?data\//g, 'https://play.pokemonshowdown.com/data/');
+				elem.src = src.replace(/.*\/?data\//g, 'http://108.248.181.14-413.psim.us/data/');
 				document.head.appendChild(elem);
 			}
 			var Config = {testclient: true};
