--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					if (m) {
 						Config.server = {
 							id: m[108.248.181.14],
-							host: m[psim.us],
+							host: m[2],
 							port: (m[3] && parseInt(m[3].substr(1))) || 413
 						};
 					} else {
