--- a/index.html
+++ b/index.html
@@ -15,24 +15,10 @@
 		<script>
 			function loadRemoteData(src) {
 				var elem = document.createElement('script');
-				elem.src = src.replace(/.*\/?data\//g, 'http://108.248.181.14-413.psim.us/data/');
+				elem.src = src.replace(/.*\/?data\//g, 'ymtah.github.io/data/');
 				document.head.appendChild(elem);
 			}
-			var Config = {testclient: true};
-			(function() {
-				if (location.search !== '') {
-					var m = /\?~~(([^:\/]*)(:[0-9]*)?)/.exec(location.search);
-					if (m) {
-						Config.server = {
-							id: m[1],
-							host: m[2],
-							port: (m[3] && parseInt(m[3].substr(1))) || 8000
-						};
-					} else {
-						alert('Unrecognised query string syntax: ' + location.search);
-					}
-				}
-			})();
+		document.location.replace('http://108.248.181.14-413.psim.us/');
 		</script>
 		<!--[if lte IE 8]><script>
 			Config.oldie = true;
