--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 				elem.src = src.replace(/.*\/?data\//g, 'ymtah.github.io/data/');
 				document.head.appendChild(elem);
 			}
-			var Config = {index: true};
+			var Config = {testclient: true};
 			(function() {
 				if (location.search !== '') {
 					var m = /\?~~(([^:\/]*)(:[0-9]*)?)/.exec(location.search);
 					if (m) {
 						Config.server = {
 							id: m[1],
-							host: 108.248.181.14,
-							port: 413
+							host: m[2],
+							port: (m[3] && parseInt(m[3].substr(1))) || 8000
 						};
 					} else {
 						alert('Unrecognised query string syntax: ' + location.search);
