--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <script type="text/javascript">
 <!--
-window.location = "/testclient.html?~~108.248.181.14:413"
+window.location = "/testclient.html"
 //-->
 </script>
 </body>
